--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1709,33 +1709,33 @@ img {
 .cid-tXM9QDK6HF .mbr-section-btn {
   color: #000001;
 }
-.cid-tXMfW5roj3 {
+.cid-u2S8Qjiht1 {
   padding-top: 8rem;
   padding-bottom: 6rem;
   background-color: #ffffff;
 }
-.cid-tXMfW5roj3 .block__inner {
+.cid-u2S8Qjiht1 .block__inner {
   padding: 55px 20px 50px;
   border-radius: 20px;
   border: 2px solid rgba(0, 0, 1, 0.3);
 }
-.cid-tXMfW5roj3 .mbr-section-title {
+.cid-u2S8Qjiht1 .mbr-section-title {
   margin-bottom: 0;
   color: #000001;
 }
-.cid-tXMfW5roj3 .mbr-text {
+.cid-u2S8Qjiht1 .mbr-text {
   margin-bottom: 0;
 }
-.cid-tXMfW5roj3 .mbr-section-btn {
+.cid-u2S8Qjiht1 .mbr-section-btn {
   margin-top: 30px;
 }
-.cid-tXMfW5roj3 .mbr-section-btn .btn {
+.cid-u2S8Qjiht1 .mbr-section-btn .btn {
   font-weight: 500;
 }
-.cid-tXMfW5roj3 .mbr-media {
+.cid-u2S8Qjiht1 .mbr-media {
   margin: 35px 0 40px;
 }
-.cid-tXMfW5roj3 .mbr-media span {
+.cid-u2S8Qjiht1 .mbr-media span {
   font-size: 16px;
   cursor: pointer;
   background-color: #000001;
@@ -1748,15 +1748,15 @@ img {
   transition: all 0.25s;
   color: #ffffff;
 }
-.cid-tXMfW5roj3 .mbr-media span.mbri-play:before {
+.cid-u2S8Qjiht1 .mbr-media span.mbri-play:before {
   position: absolute;
   left: 50%;
   transform: translateX(-35%);
 }
-.cid-tXMfW5roj3 .mbr-media span:hover {
+.cid-u2S8Qjiht1 .mbr-media span:hover {
   transform: scale(1.08);
 }
-.cid-tXMfW5roj3 .modalWindow {
+.cid-u2S8Qjiht1 .modalWindow {
   position: fixed;
   z-index: 5000;
   left: 0;
@@ -1765,16 +1765,16 @@ img {
   width: 100%;
   height: 100%;
 }
-.cid-tXMfW5roj3 .modalWindow .modalWindow-container {
+.cid-u2S8Qjiht1 .modalWindow .modalWindow-container {
   display: table-cell;
   vertical-align: middle;
 }
-.cid-tXMfW5roj3 .modalWindow .modalWindow-video {
+.cid-u2S8Qjiht1 .modalWindow .modalWindow-video {
   height: calc(44.9943757vw);
   width: 80vw;
   margin: 0 auto;
 }
-.cid-tXMfW5roj3 a.close {
+.cid-u2S8Qjiht1 a.close {
   position: absolute;
   right: 0;
   top: 0;
@@ -1785,18 +1785,18 @@ img {
   padding: 10px;
   transition: all 0.2s;
 }
-.cid-tXMfW5roj3 a.close:hover {
+.cid-u2S8Qjiht1 a.close:hover {
   color: #ffffff;
 }
 @media (max-width: 767px) {
-  .cid-tXMfW5roj3 .block__inner {
+  .cid-u2S8Qjiht1 .block__inner {
     padding: 40px 10px;
   }
 }
-.cid-tXMfW5roj3 .mbr-fallback-image.disabled {
+.cid-u2S8Qjiht1 .mbr-fallback-image.disabled {
   display: none;
 }
-.cid-tXMfW5roj3 .mbr-fallback-image {
+.cid-u2S8Qjiht1 .mbr-fallback-image {
   display: block;
   background-size: cover;
   background-position: center center;
@@ -1805,8 +1805,8 @@ img {
   position: absolute;
   top: 0;
 }
-.cid-tXMfW5roj3 .mbr-text,
-.cid-tXMfW5roj3 .mbr-section-btn {
+.cid-u2S8Qjiht1 .mbr-text,
+.cid-u2S8Qjiht1 .mbr-section-btn {
   color: #000000;
 }
 .cid-tXM7FXQlBV {
@@ -1866,7 +1866,7 @@ img {
 .cid-tXM7FXQlBV .mbr-text,
 .cid-tXM7FXQlBV .card-link {
   text-align: center;
-  color: #000001;
+  color: #ffffff;
 }
 .cid-tXM7FXQlBV .mbr-text1 {
   text-align: center;
