--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2011,6 +2011,180 @@ img {
 .cid-tXLYasR9bV P {
   color: #00775c;
 }
+.cid-u388fJxgUM {
+  padding-top: 0rem;
+  padding-bottom: 1rem;
+  background-color: #e6e6e6;
+}
+.cid-u388fJxgUM .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-u388fJxgUM .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+.cid-u388fJxgUM .container-fluid {
+  padding: 0 20px;
+}
+@media (max-width: 992px) {
+  .cid-u388fJxgUM .container-fluid {
+    padding: 0 6px;
+  }
+}
+@media (max-width: 992px) {
+  .cid-u388fJxgUM .container {
+    padding: 0 6px;
+  }
+}
+.cid-u388fJxgUM .row {
+  margin: 0;
+  padding: 150px;
+}
+@media (max-width: 1440px) {
+  .cid-u388fJxgUM .row {
+    padding: 150px 32px;
+  }
+}
+@media (max-width: 1200px) {
+  .cid-u388fJxgUM .row {
+    padding: 150px 8px;
+  }
+}
+@media (max-width: 992px) {
+  .cid-u388fJxgUM .row {
+    padding: 70px 60px;
+  }
+}
+@media (max-width: 768px) {
+  .cid-u388fJxgUM .row {
+    padding: 70px 30px;
+  }
+}
+.cid-u388fJxgUM .row .card {
+  padding: 0;
+  border-radius: 0 !important;
+  overflow: visible;
+}
+.cid-u388fJxgUM .desc-wrapper {
+  padding-right: 32px;
+  margin-bottom: 64px;
+  padding-right: 0;
+  padding-left: 32px;
+}
+@media (max-width: 992px) {
+  .cid-u388fJxgUM .desc-wrapper {
+    padding: 0;
+  }
+}
+@media (max-width: 992px) {
+  .cid-u388fJxgUM .desc-wrapper {
+    padding: 0;
+  }
+}
+.cid-u388fJxgUM .desc-wrapper .mbr-desc {
+  padding: 10px 18px;
+  display: inline-flex;
+  border: 1px solid #cfcfcf;
+  border-radius: 30px;
+  margin-bottom: 0;
+}
+.cid-u388fJxgUM .title-wrapper {
+  margin-bottom: 64px;
+}
+.cid-u388fJxgUM .title-wrapper span {
+  color: #009472;
+}
+.cid-u388fJxgUM .title-wrapper .mbr-section-title {
+  margin-bottom: 0;
+}
+.cid-u388fJxgUM .cards-wrapper {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 50px 40px;
+}
+@media (max-width: 992px) {
+  .cid-u388fJxgUM .cards-wrapper {
+    display: block;
+  }
+}
+.cid-u388fJxgUM .cards-wrapper .item {
+  position: relative;
+  margin-top: 50px;
+}
+@media (max-width: 992px) {
+  .cid-u388fJxgUM .cards-wrapper .item {
+    margin: 50px 0 100px 0;
+  }
+}
+.cid-u388fJxgUM .cards-wrapper .item .item-wrapper {
+  padding: 0 30px 30px;
+  border-radius: 16px !important;
+  background-color: #ffffff;
+}
+@media (max-width: 992px) {
+  .cid-u388fJxgUM .cards-wrapper .item .item-wrapper {
+    padding: 0 22px 22px;
+  }
+}
+.cid-u388fJxgUM .cards-wrapper .item .item-wrapper .item-img {
+  margin-bottom: 20px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  height: 50px;
+}
+.cid-u388fJxgUM .cards-wrapper .item .item-wrapper .item-img img {
+  position: absolute;
+  top: -50px;
+  height: 100px;
+  width: 100px;
+  object-fit: cover;
+  border-radius: 100% !important;
+  border: 10px solid #009472;
+}
+.cid-u388fJxgUM .cards-wrapper .item .item-wrapper .item-content .card-title {
+  margin-bottom: 10px;
+}
+.cid-u388fJxgUM .cards-wrapper .item .item-wrapper .item-content .card-desc {
+  margin-bottom: 10px;
+}
+.cid-u388fJxgUM .cards-wrapper .item .item-wrapper .item-content .mbr-text {
+  margin-bottom: 0;
+}
+.cid-u388fJxgUM .cards-wrapper .item .item-wrapper .item-content .mbr-section-btn {
+  margin-top: 20px;
+}
+.cid-u388fJxgUM .cards-wrapper .item .item-wrapper .item-content .mbr-section-btn .btn {
+  border: none;
+  text-decoration: underline;
+}
+.cid-u388fJxgUM .mbr-desc {
+  color: #262626;
+}
+.cid-u388fJxgUM .mbr-section-title {
+  color: #131313;
+  text-align: right;
+}
+.cid-u388fJxgUM .card-desc {
+  color: #009472;
+  text-align: center;
+}
+.cid-u388fJxgUM .card-title {
+  color: #131313;
+}
+.cid-u388fJxgUM .card-text {
+  color: #131313;
+  text-align: center;
+}
+.cid-u388fJxgUM .card-title,
+.cid-u388fJxgUM .mbr-section-btn {
+  text-align: center;
+}
 .cid-tQoErSVHGz {
   padding-top: 0rem;
   padding-bottom: 1rem;
