--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1709,10 +1709,92 @@ img {
 .cid-tXM9QDK6HF .mbr-section-btn {
   color: #000001;
 }
+.cid-u8YVinXd6j {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-u8YVinXd6j .mbr-fallback-image.disabled {
+  display: none;
+}
+.cid-u8YVinXd6j .mbr-fallback-image {
+  display: block;
+  background-size: cover;
+  background-position: center center;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+}
+@media (max-width: 992px) {
+  .cid-u8YVinXd6j .container {
+    padding: 0 30px;
+  }
+}
+.cid-u8YVinXd6j .row {
+  justify-content: center;
+}
+@media (min-width: 992px) {
+  .cid-u8YVinXd6j .row {
+    margin: 0 -34px;
+  }
+}
+.cid-u8YVinXd6j .title-wrapper {
+  margin-bottom: 30px;
+}
+.cid-u8YVinXd6j .title-wrapper .mbr-section-subtitle {
+  margin-bottom: 30px;
+}
+.cid-u8YVinXd6j .title-wrapper .mbr-section-title {
+  margin-bottom: 0;
+}
+.cid-u8YVinXd6j .card {
+  padding: 0 34px;
+}
+@media (max-width: 992px) {
+  .cid-u8YVinXd6j .card {
+    margin-bottom: 40px;
+    padding: 0 12px;
+  }
+}
+.cid-u8YVinXd6j .card .card-wrapper .mbr-number {
+  margin-bottom: 30px;
+}
+.cid-u8YVinXd6j .card .card-wrapper .mbr-card-title {
+  margin-bottom: 30px;
+}
+.cid-u8YVinXd6j .card .card-wrapper .mbr-text {
+  margin-bottom: 16px;
+}
+.cid-u8YVinXd6j .mbr-section-subtitle {
+  color: #212529;
+  text-align: center;
+}
+.cid-u8YVinXd6j .mbr-section-title {
+  color: #212529;
+  text-align: center;
+}
+.cid-u8YVinXd6j .mbr-number {
+  color: #212529;
+  text-align: center;
+}
+.cid-u8YVinXd6j .mbr-card-title {
+  color: #00775c;
+  text-align: center;
+}
+.cid-u8YVinXd6j .mbr-text {
+  color: #212529;
+  text-align: center;
+}
+.cid-u8YVinXd6j .mbr-section-title,
+.cid-u8YVinXd6j .mbr-section-btn {
+  color: #000001;
+  text-align: center;
+}
 .cid-u3BP43g7Tm {
   padding-top: 4rem;
   padding-bottom: 0rem;
-  background-image: linear-gradient(135deg, #ffffff 10%, #ffffff 100%) !important;
+  background-image: linear-gradient(135deg, #e6e6e6 10%, #e6e6e6 100%) !important;
 }
 .cid-u3BP43g7Tm .mbr-fallback-image.disabled {
   display: none;
